--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
+    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
   </head>
   
   <body>
