--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <nav>
+    <nav id="navbar">
       <ul>
         <li><a href="index.html">Introduction Page</a></li>
         <li><a href="aboutme.html">About Me</a></li>
