--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>ITMD-361 Project 1</title>
+    <title>ITMD-361 Project 2</title>
+    <link rel="stylesheet" type="text/css" href="css/aboutmestyle.css">
   </head>
   
   <body>
