--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <body>
     <h1>Welcome to Jimmy Tran's Simple HTML Website</h1>
+    <h1>(now with CSS!)</h1>
     <p>Navigate Through Pages About Me</p>
     <nav id="navbar">
       <ul>
@@ -18,7 +19,7 @@
       </ul>
     </nav>
     <h2><strong><em>Introduction Page</em></strong></h2>
-    <p>An Hour Mix by Swedish Producer Joakim Karud I Enjoy Listening to While Doing Homework:</p> 
+    <p>This Is An Hour Mix by Swedish Producer Joakim Karud I Enjoy Listening to While Doing Homework:</p> 
     <iframe width="700" height="400" src="https://www.youtube.com/embed/X043YX8Ruaw" allowfullscreen></iframe>
   </body>
   
