switched up nav w/ css
placed navigation into fixed position with css

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,13 +8,6 @@
   </head>
 
   <body>
-    <nav id="navbar">
-      <ul>
-        <li><a href="index.html">Introduction Page</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="resume.html">My Resume</a></li>
-      </ul>
-    </nav>
     <h1><strong><em>About Me</em></strong> - Jimmy T.</h1>
     <p class="relexample"><span class="firstchar">H</span>ello to anyone that is interested in reading <strong>ABOUT ME!</strong></p>
     <p class="relexample"><span class="firstchar">T</span>here's definitely nothing special about me at 
@@ -34,15 +27,24 @@
        Genesis, GameBoy, Playstation, and many more. I just don't own many of the newer generation 
        consoles except the Wii U, because I've always been a Nintendo fan, which I rarely touch nowadays.</p>
     <p class="relexample"><span class="firstchar">S</span>ome of the games on the computer that I currently play are: </p>
-    <ul>
-      <li>Black Desert Online</li>
-      <li>League of Legends</li>
-      <li>Overwatch</li>
-      <li>Warcraft 3</li>
-      <li>Path of Exile</li>
-      <li>Super Smash Brothers: Melee (NetPlay)</li>
-      <li>Counter-Strike: Global Offensive</li>
-    </ul>
+    <div id="fixedbox">
+      <nav id="navbar">
+        <ul>
+          <li><a href="index.html">Introduction Page</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="resume.html">My Resume</a></li>
+        </ul>
+      </nav>
+    </div>
+      <ul>
+        <li>Black Desert Online</li>
+        <li>League of Legends</li>
+        <li>Overwatch</li>
+        <li>Warcraft 3</li>
+        <li>Path of Exile</li>
+        <li>Super Smash Brothers: Melee (NetPlay)</li>
+        <li>Counter-Strike: Global Offensive</li>
+      </ul> 
     <p class="relexample"><span class="firstchar">T</span>his may or may not seem like a lot of games to 
        play, but it's not like I play them all at once. I like to toggle around each variety of game 
        because each game isn't the same. Some are first person shooters, some are real time strategy, 
