--- a/resume.html
+++ b/resume.html
@@ -6,15 +6,17 @@
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="css/resumestyle.css">
   </head>
-  
+ 
   <body>
-    <nav id="navbar">
-      <ul>
-        <li><a href="index.html">Introduction Page</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="resume.html">My Resume</a></li>
-      </ul>
-    </nav>
+    <div id="fixedbox">
+      <nav id="navbar">
+        <ul>
+          <li><a href="index.html">Introduction Page</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="resume.html">My Resume</a></li>
+        </ul>
+      </nav>
+    </div>
     <h1><strong><em>Resume</em></strong></h1>
     <h2><strong>Jimmy Tran</strong></h2>
     <p>773-575-4927</p>
