added a lot of css
removed <u> tags and added css to underline as well as a lot of other css

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,6 +36,7 @@
         </ul>
       </nav>
     </div>
+    <div id="gamelist">
       <ul>
         <li>Black Desert Online</li>
         <li>League of Legends</li>
@@ -45,6 +46,7 @@
         <li>Super Smash Brothers: Melee (NetPlay)</li>
         <li>Counter-Strike: Global Offensive</li>
       </ul> 
+    </div>  
     <p class="relexample"><span class="firstchar">T</span>his may or may not seem like a lot of games to 
        play, but it's not like I play them all at once. I like to toggle around each variety of game 
        because each game isn't the same. Some are first person shooters, some are real time strategy, 
@@ -56,7 +58,9 @@
        be the only genres I would listen to. I would listen to anything from rap to reggaetone or something 
        like "The Beatles". I love music in general, but definitely not ALL music. I can NOT do screamos, 
        heavy metal, or anything that doesn't sound too pleasant.</p>
-    <p>Vietnam: </p>
+    <div id="text">   
+      <p><span class="colortwo">V</span><span class="colorone">i</span><span class="colortwo">e</span><span class="colorone">t</span><span class="colortwo">n</span><span class="colorone">a</span><span class="colortwo">m</span><span class="colorone">:</span> </p>
+    </div>
     <img src="pictures/vn.jpg" alt="Vietnam">
     <img src="pictures/vnflag.jpg" alt="Vietnam Flag">
   </body>
