--- a/resume.html
+++ b/resume.html
@@ -23,12 +23,12 @@
     <p>6321 N. Hamlin Ave</p>
     <p>Chicago, Illinois, 60659</p>
     <p>jtran8@hawk.iit.edu</p>
-    <p><strong><u>Objectives</u></strong></p>
+    <p><strong><span class="text">Objectives</span></strong></p>
     <p>To obtain an opportunity that will provide new challenges and experiences that would allow me to apply and develop my knowledge in the work field.</p>
-    <p><strong><u>Education</u></strong></p>
+    <p><strong><span class="text">Education</span></strong></p>
     <p><strong><em>Illinois Institute of Technology</em></strong></p>
     <p>Bachelors in Informational Technology and Management (Expected May 2019)</p>
-    <p><strong><u>Experience</u></strong></p>
+    <p><strong><span class="text">Experience</span></strong></p>
     <p><strong><em>Dominick's Finer Foods - Chicago, Illinois</em></strong> | Utility Clerk, November 2012 - June 2013</p>
     <ul>
       <li>Cleaned the store hourly</li>
@@ -62,7 +62,7 @@
       <li>Collaborated with membership chairs of other sororities to coordinate events to spread Asian Awareness</li>
       <li>Organize and maintain social media, such as Facebook, Twitter, and Instagram for the fraternity.</li>
     </ul>
-    <p><strong><u>Skills</u></strong></p>
+    <p><strong><span class="text">Skills</span></strong></p>
     <ul>
       <li>Basic computer software and hardware</li>
       <li>Basic knowledge of Java, C#, C++, and Visual Basic language</li>
