--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-    <h1><strong><em>About Me</em></strong> - Jimmy T.</h1>
+    <div id="font">
+      <h1>About Me - Jimmy T.</h1>
+    </div>
     <p class="relexample"><span class="firstchar">H</span>ello to anyone that is interested in reading <strong>ABOUT ME!</strong></p>
     <p class="relexample"><span class="firstchar">T</span>here's definitely nothing special about me at 
        all. As you can tell, my name is Jimmy Tran. I was born and raised in Chicago. My nationality is 
@@ -18,7 +20,7 @@
        country of Vietnam. Although, I have been to other places/countries like Ontario, Vancouver, 
        Toronto which are places in Canada. I've also been to Helsinki, Finland in Europe. I have only 
        been to these places because I have friends and relatives that stay there.</p>
-    <h2><strong>Hobbies</strong></h2>
+    <h2><span class="fontone">Hobbies</span></h2>
     <p class="relexample"><span class="firstchar">I</span> particularly don't have too many hobbies 
        but the few that I do have are eating out at fancy places (if you can even call that a hobby), 
        throwing around a lacrosse ball (I use to play back in high school but only throw/shoot around now),
