--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,9 @@
         </ul>
       </nav>
     </div>
-    <h1><strong><em>Resume</em></strong></h1>
+    <div id="font">
+      <h1>Resume</h1>
+    </div>  
     <h2><strong>Jimmy Tran</strong></h2>
     <p>773-575-4927</p>
     <p>6321 N. Hamlin Ave</p>
