--- a/resume.html
+++ b/resume.html
@@ -20,18 +20,22 @@
     <div id="font">
       <h1>Resume</h1>
     </div>  
-    <h2><strong>Jimmy Tran</strong></h2>
+    <div id="fontone">
+      <h2>Jimmy Tran</h2>
+    </div>
     <p>773-575-4927</p>
     <p>6321 N. Hamlin Ave</p>
     <p>Chicago, Illinois, 60659</p>
     <p>jtran8@hawk.iit.edu</p>
-    <p><strong><span class="text">Objectives</span></strong></p>
+    <p><span class="text">Objectives</span></p>
     <p>To obtain an opportunity that will provide new challenges and experiences that would allow me to apply and develop my knowledge in the work field.</p>
-    <p><strong><span class="text">Education</span></strong></p>
-    <p><strong><em>Illinois Institute of Technology</em></strong></p>
+    <p><span class="text">Education</span></p>
+    <div id="font">  
+      <p>Illinois Institute of Technology</p>
+    </div>  
     <p>Bachelors in Informational Technology and Management (Expected May 2019)</p>
-    <p><strong><span class="text">Experience</span></strong></p>
-    <p><strong><em>Dominick's Finer Foods - Chicago, Illinois</em></strong> | Utility Clerk, November 2012 - June 2013</p>
+    <p><span class="text">Experience</span></p>
+    <p><span class="textone">Dominick's Finer Foods - Chicago, Illinois</span> | Utility Clerk, November 2012 - June 2013</p>
     <ul>
       <li>Cleaned the store hourly</li>
       <li>Put overstock back on shelves</li>
@@ -40,7 +44,7 @@
       <li>Provided extraordinary customer service</li>
       <li>Organized all the products in coolers and shelves</li>
     </ul>
-    <p><strong><em>Outdoor Cafe - Chicago, Illinois</em></strong> | Barista, May 2014 - August 2015</p>
+    <p><span class="textone">Outdoor Cafe - Chicago, Illinois</span> | Barista, May 2014 - August 2015</p>
     <ul>
       <li>Maintained a clean and healthy cafe</li>
       <li>Greeted customers as they entered and left the premises</li>
@@ -48,7 +52,7 @@
       <li>Always giving customers their satisfaction</li>
       <li>Make and provide sandwiches, drinks, and desserts</li>
     </ul>
-    <p><strong><em>AT Nails - Chicago, Illinois</em></strong> | Receptionist, May 2013 - Present</p>
+    <p><span class="textone">AT Nails - Chicago, Illinois</span> | Receptionist, May 2013 - Present</p>
     <ul>
       <li>Greeted customers</li>
       <li>Customer satisfaction as a priority</li>
@@ -58,13 +62,13 @@
       <li>Cleaned all the predicure massage chairs thoroughly</li>
       <li>Help nail technicians get ahead of their work (i.e. start pedicure massage bath as they finish current work)</li>
     </ul>
-    <p><strong><em>Chi Sigma Tau Franternity, Inc. UIC - Chicago, Illinois</em></strong> | Member, November 2013 - Present</p>
+    <p><span class="textone">Chi Sigma Tau Franternity, Inc. UIC - Chicago, Illinois</span> | Member, November 2013 - Present</p>
     <ul>
       <li>Represent organization on campus-wide committees to advocate for Asian American and cultural issues</li>
       <li>Collaborated with membership chairs of other sororities to coordinate events to spread Asian Awareness</li>
       <li>Organize and maintain social media, such as Facebook, Twitter, and Instagram for the fraternity.</li>
     </ul>
-    <p><strong><span class="text">Skills</span></strong></p>
+    <p><span class="text">Skills</span></p>
     <ul>
       <li>Basic computer software and hardware</li>
       <li>Basic knowledge of Java, C#, C++, and Visual Basic language</li>
