added google fonts
changed some <p> to <h3> tags and added 2 google fonts

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="css/resumestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
+    <style type="text/css">
+      h1, h2, h3 {
+        font-family: 'Open Sans', sans-serif;
+      }
+      p, ul {
+      font-family: 'Roboto Condensed', sans-serif;
+      }
+    </style>
   </head>
  
   <body>
@@ -27,14 +36,14 @@
     <p>6321 N. Hamlin Ave</p>
     <p>Chicago, Illinois, 60659</p>
     <p>jtran8@hawk.iit.edu</p>
-    <p><span class="text">Objectives</span></p>
+    <h3><span class="text">Objectives</span></h3>
     <p>To obtain an opportunity that will provide new challenges and experiences that would allow me to apply and develop my knowledge in the work field.</p>
-    <p><span class="text">Education</span></p>
+    <h3><span class="text">Education</span></h3>
     <div id="font">  
       <p>Illinois Institute of Technology</p>
     </div>  
     <p>Bachelors in Informational Technology and Management (Expected May 2019)</p>
-    <p><span class="text">Experience</span></p>
+    <h3><span class="text">Experience</span></h3>
     <p><span class="textone">Dominick's Finer Foods - Chicago, Illinois</span> | Utility Clerk, November 2012 - June 2013</p>
     <ul>
       <li>Cleaned the store hourly</li>
@@ -68,7 +77,7 @@
       <li>Collaborated with membership chairs of other sororities to coordinate events to spread Asian Awareness</li>
       <li>Organize and maintain social media, such as Facebook, Twitter, and Instagram for the fraternity.</li>
     </ul>
-    <p><span class="text">Skills</span></p>
+    <h3><span class="text">Skills</span></h3>
     <ul>
       <li>Basic computer software and hardware</li>
       <li>Basic knowledge of Java, C#, C++, and Visual Basic language</li>
