added google fonts
added 1 google fonts to index and 3 google fonts to aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,18 @@
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="css/aboutmestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Noto+Sans|Source+Sans+Pro" rel="stylesheet">
+    <style type="text/css">
+      h1, h2, h3 {
+        font-family: 'Source Sans Pro', sans-serif;
+      }
+      p {
+        font-family: 'Noto Sans', sans-serif;
+      }  
+      ul {  
+        font-family: 'Cabin', sans-serif;
+      }
+    </style>
   </head>
 
   <body>
@@ -61,7 +73,7 @@
        like "The Beatles". I love music in general, but definitely not ALL music. I can NOT do screamos, 
        heavy metal, or anything that doesn't sound too pleasant.</p>
     <div id="text">   
-      <p><span class="colortwo">V</span><span class="colorone">i</span><span class="colortwo">e</span><span class="colorone">t</span><span class="colortwo">n</span><span class="colorone">a</span><span class="colortwo">m</span><span class="colorone">:</span> </p>
+      <h3><span class="colortwo">V</span><span class="colorone">i</span><span class="colortwo">e</span><span class="colorone">t</span><span class="colortwo">n</span><span class="colorone">a</span><span class="colortwo">m</span><span class="colorone">:</span></h3>
     </div>
     <img src="pictures/vn.jpg" alt="Vietnam">
     <img src="pictures/vnflag.jpg" alt="Vietnam Flag">
