--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="resume.html">My Resume</a></li>
       </ul>
     </nav>
-    <div id="font">
+    <div id="fontone">
       <h2>Introduction Page</h2>
     </div>
     <p>This Is An Hour Mix by Swedish Producer Joakim Karud I Enjoy Listening to While Doing Homework:</p> 
