--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
-    <link rel="stylesheet" type="text/css" href="css/aboutmestyle.css">
+    <link rel="stylesheet" type="text/css" href="onestylepage.css.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   </head>
 
-  <body>
+  <body id="page2">
     <div id="font">
       <h1>About Me - Jimmy T.</h1>
     </div>
