--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
-    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
+    <link rel="stylesheet" type="text/css" href="onestylepage.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   
-  <body>
+  <body id="page1">
     <h1>Welcome to Jimmy Tran's Simple HTML Website</h1>
     <div id="font">
       <h1>(<span class="color1">n</span><span class="color2">o</span><span class="color3">w</span> <span class="color4">w</span><span class="color5">i</span><span class="color6">t</span><span class="color7">h</span> <span class="color8">C</span><span class="color9">S</span><span class="color10">S</span><span class="color11">!</span>)</h1>
