--- a/resume.html
+++ b/resume.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
-    <link rel="stylesheet" type="text/css" href="css/resumestyle.css">
+    <link rel="stylesheet" type="text/css" href="onestylepage.css.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   </head>
  
-  <body>
+  <body id="page3">
     <div id="fixedbox">
       <nav id="navbar">
         <ul>
