--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
-    <link rel="stylesheet" type="text/css" href="onestylepage.css.css">
+    <link rel="stylesheet" type="text/css" href="onestylepage.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   </head>
