--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="onestylepage.css">
+    <link rel="stylesheet" type="text/css" href="cssreset.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
@@ -32,14 +33,16 @@
        Genesis, GameBoy, Playstation, and many more. I just don't own many of the newer generation 
        consoles except the Wii U, because I've always been a Nintendo fan, which I rarely touch nowadays.</p>
     <p class="relexample"><span class="firstchar">S</span>ome of the games on the computer that I currently play are: </p>
-    <div id="fixedbox">
-      <nav id="navbar">
-        <ul>
-          <li><a href="index.html">Introduction Page</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="resume.html">My Resume</a></li>
-        </ul>
-      </nav>
+    <div id="absbox">
+      <div id="fixedbox">
+        <nav id="navbar">
+          <ul>
+            <li><a href="index.html">Introduction Page</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="resume.html">My Resume</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
     <div id="gamelist">
       <ul>
