--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="onestylepage.css">
+    <link rel="stylesheet" type="text/css" href="cssreset.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   
