--- a/resume.html
+++ b/resume.html
@@ -5,19 +5,22 @@
     <meta charset="utf-8">
     <title>ITMD-361 Project 2</title>
     <link rel="stylesheet" type="text/css" href="onestylepage.css">
+    <link rel="stylesheet" type="text/css" href="cssreset.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   </head>
  
   <body id="page3">
-    <div id="fixedbox">
-      <nav id="navbar">
-        <ul>
-          <li><a href="index.html">Introduction Page</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="resume.html">My Resume</a></li>
-        </ul>
-      </nav>
+    <div id="absbox">
+      <div id="fixedbox">
+        <nav id="navbar">
+          <ul>
+            <li><a href="index.html">Introduction Page</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="resume.html">My Resume</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
     <div id="font">
       <h1>Resume</h1>
