added css in resume
fixed a bunch of css, added a lot of div tags to separate paragraphs, added margins to better align text, centered the whole body

--- a/resume.html
+++ b/resume.html
@@ -38,39 +38,47 @@
     </div>  
     <p>Bachelors in Informational Technology and Management (Expected May 2019)</p>
     <h3><span class="text">Experience</span></h3>
-    <p><span class="textone">Dominick's Finer Foods - Chicago, Illinois</span> | Utility Clerk, November 2012 - June 2013</p>
-    <ul>
-      <li>Cleaned the store hourly</li>
-      <li>Put overstock back on shelves</li>
-      <li>Went outside an retrieved carts</li>
-      <li>Bagged groceries for customers</li>
-      <li>Provided extraordinary customer service</li>
-      <li>Organized all the products in coolers and shelves</li>
-    </ul>
-    <p><span class="textone">Outdoor Cafe - Chicago, Illinois</span> | Barista, May 2014 - August 2015</p>
-    <ul>
-      <li>Maintained a clean and healthy cafe</li>
-      <li>Greeted customers as they entered and left the premises</li>
-      <li>Maintained any customer service orders when cafe gets extremely busy</li>
-      <li>Always giving customers their satisfaction</li>
-      <li>Make and provide sandwiches, drinks, and desserts</li>
-    </ul>
-    <p><span class="textone">AT Nails - Chicago, Illinois</span> | Receptionist, May 2013 - Present</p>
-    <ul>
-      <li>Greeted customers</li>
-      <li>Customer satisfaction as a priority</li>
-      <li>Inputting customer's orders for whent he next nail technician is available</li>
-      <li>Keeping calm and comprising with an unsatisfied or aggressive customer</li>
-      <li>Took phone orders for when the customer would come in and pay for nail service</li>
-      <li>Cleaned all the predicure massage chairs thoroughly</li>
-      <li>Help nail technicians get ahead of their work (i.e. start pedicure massage bath as they finish current work)</li>
-    </ul>
-    <p><span class="textone">Chi Sigma Tau Franternity, Inc. UIC - Chicago, Illinois</span> | Member, November 2013 - Present</p>
-    <ul>
-      <li>Represent organization on campus-wide committees to advocate for Asian American and cultural issues</li>
-      <li>Collaborated with membership chairs of other sororities to coordinate events to spread Asian Awareness</li>
-      <li>Organize and maintain social media, such as Facebook, Twitter, and Instagram for the fraternity.</li>
-    </ul>
+    <p><span class="textone">Dominick's Finer Foods - Chicago, Illinois</span> | <span class="texttwo">Utility Clerk, November 2012 - June 2013</span></p>
+    <div id="a">
+      <ul>
+        <li>Cleaned the store hourly</li>
+        <li>Put overstock back on shelves</li>
+        <li>Went outside an retrieved carts</li>
+        <li>Bagged groceries for customers</li>
+        <li>Provided extraordinary customer service</li>
+        <li>Organized all the products in coolers and shelves</li>
+      </ul>
+    </div>
+    <p><span class="textone">Outdoor Cafe - Chicago, Illinois</span> | <span class="texttwo">Barista, May 2014 - August 2015</span></p>
+    <div id="b">
+      <ul>
+        <li>Maintained a clean and healthy cafe</li>
+        <li>Greeted customers as they entered and left the premises</li>
+        <li>Maintained any customer service orders when cafe gets extremely busy</li>
+        <li>Always giving customers their satisfaction</li>
+        <li>Make and provide sandwiches, drinks, and desserts</li>
+      </ul>
+    </div>
+    <p><span class="textone">AT Nails - Chicago, Illinois</span> | <span class="texttwo">Receptionist, May 2013 - Present</span></p>
+    <div id="c">
+      <ul>
+        <li>Greeted customers</li>
+        <li>Customer satisfaction as a priority</li>
+        <li>Inputting customer's orders for whent he next nail technician is available</li>
+        <li>Keeping calm and comprising with an unsatisfied or aggressive customer</li>
+        <li>Took phone orders for when the customer would come in and pay for nail service</li>
+        <li>Cleaned all the predicure massage chairs thoroughly</li>
+        <li>Help nail technicians get ahead of their work (i.e., start pedicure massage bath as they finish current work)</li>
+      </ul>
+    </div>
+    <p><span class="textone">Chi Sigma Tau Franternity, Inc. UIC - Chicago, Illinois</span> | <span class="texttwo">Member, November 2013 - Present</span></p>
+    <div id="d">
+      <ul>
+        <li>Represent organization on campus-wide committees to advocate for Asian American and cultural issues</li>
+        <li>Collaborated with membership chairs of other sororities to coordinate events to spread Asian Awareness</li>
+        <li>Organize and maintain social media, such as Facebook, Twitter, and Instagram for the fraternity.</li>
+      </ul>
+    </div>
     <h3><span class="text">Skills</span></h3>
     <ul>
       <li>Basic computer software and hardware</li>
