added more divs
changed up a lot of cs, added margins, added divs, cleaning up page layouts with css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="font">
       <h1>(<span class="color1">n</span><span class="color2">o</span><span class="color3">w</span> <span class="color4">w</span><span class="color5">i</span><span class="color6">t</span><span class="color7">h</span> <span class="color8">C</span><span class="color9">S</span><span class="color10">S</span><span class="color11">!</span>)</h1>
     </div>
-    <p>Navigate Through Pages About Me</p>
+    <p id="a">Navigate Through Pages About Me</p>
     <nav id="navbar">
       <ul>
         <li><a href="index.html">Introduction Page</a></li>
@@ -25,7 +25,7 @@
     <div id="fontone">
       <h2>Introduction Page</h2>
     </div>
-    <p>This Is An Hour Mix by Swedish Producer Joakim Karud I Enjoy Listening to While Doing Homework:</p> 
+    <p id="b">This Is An Hour Mix by Swedish Producer Joakim Karud I Enjoy Listening to While Doing Homework:</p> 
     <iframe width="700" height="400" src="https://www.youtube.com/embed/X043YX8Ruaw" allowfullscreen></iframe>
   </body>
   
