--- a/aboutme.html
+++ b/aboutme.html
@@ -12,9 +12,6 @@
   </head>
 
   <body id="page2">
-    <div id="font">
-      <h1>About Me - Jimmy T.</h1>
-    </div>
     <div id="fixedbox">
       <nav id="navbar">
         <ul>
@@ -24,9 +21,12 @@
         </ul>
       </nav>
     </div>
+    <div id="font">
+      <h1>About Me - Jimmy T.</h1>
+    </div>
     <div id="a">
-      <p class="relexample"><span class="firstchar">H</span>ello to anyone that is interested in reading <span class="fontone">ABOUT ME!</span></p>
-      <p class="relexample"><span class="firstchar">T</span>here's definitely nothing special about me at 
+      <p><span class="firstchar">H</span>ello to anyone that is interested in reading <span class="fonttwo">ABOUT ME!</span></p>
+      <p><span class="firstchar">T</span>here's definitely nothing special about me at 
          all. As you can tell, my name is Jimmy Tran. I was born and raised in Chicago. My nationality is 
          Vietnamese and I am bi-lingual with English being my first language and Vietnamese as my second. 
          I mainly only speak my native language with my parents and english to my siblings and friends. 
@@ -37,14 +37,14 @@
     </div>
     <h2><span class="fontone">Hobbies</span></h2>
     <div id="b">
-      <p class="relexample"><span class="firstchar">I</span> particularly don't have too many hobbies 
+      <p><span class="firstchar">I</span> particularly don't have too many hobbies 
          but the few that I do have are eating out at fancy places (if you can even call that a hobby), 
          throwing around a lacrosse ball (I use to play back in high school but only throw/shoot around now),
          and playing a whole lot of games. Specifically computer games because I don't own much consoles 
          even though I grew up having almost all the older generation consoles like the DreamCast, N64, 
          Genesis, GameBoy, Playstation, and many more. I just don't own many of the newer generation 
          consoles except the Wii U, because I've always been a Nintendo fan, which I rarely touch nowadays.</p>
-      <p class="relexample"><span class="firstchar">S</span>ome of the games on the computer that I currently play are:</p> 
+      <p><span class="firstchar">S</span>ome of the games on the computer that I currently play are:</p> 
       <div id="gamelist">
         <ul>
           <li>Black Desert Online</li>
@@ -56,11 +56,11 @@
           <li>Counter-Strike: Global Offensive</li>
         </ul> 
       </div>  
-      <p class="relexample"><span class="firstchar">T</span>his may or may not seem like a lot of games to 
+      <p><span class="firstchar">T</span>his may or may not seem like a lot of games to 
          play, but it's not like I play them all at once. I like to toggle around each variety of game 
          because each game isn't the same. Some are first person shooters, some are real time strategy, 
          and some are massively multiplayer onine role playing game.</p>
-      <p class="relexample"><span class="firstchar">I</span> guess I might as well mention the music I like 
+      <p><span class="firstchar">I</span> guess I might as well mention the music I like 
          to listen to, seeing that listening to music is 
          most likely another hobby. I usually like any type of music that sounds good. To be more specific, 
          I like to listen to music from eletronic dance music, hip-hop, r and b, etc. Although, these wouldn't 
