--- a/resume.html
+++ b/resume.html
@@ -26,17 +26,19 @@
     <div id="fontone">
       <h2>Jimmy Tran</h2>
     </div>
-    <p>773-575-4927</p>
-    <p>6321 N. Hamlin Ave</p>
-    <p>Chicago, Illinois, 60659</p>
-    <p>jtran8@hawk.iit.edu</p>
+    <div id="h">
+      <p>773-575-4927</p>
+      <p>6321 N. Hamlin Ave</p>
+      <p>Chicago, Illinois, 60659</p>
+      <p>jtran8@hawk.iit.edu</p>
+    </div>
     <h3><span class="text">Objectives</span></h3>
-    <p>To obtain an opportunity that will provide new challenges and experiences that would allow me to apply and develop my knowledge in the work field.</p>
+    <p id="f">To obtain an opportunity that will provide new challenges and experiences that would allow me to apply and develop my knowledge in the work field.</p>
     <h3><span class="text">Education</span></h3>
     <div id="fonttwo">  
-      <p>Illinois Institute of Technology</p>
+      <p>Illinois Institute of Technology</p> 
     </div>  
-    <p>Bachelors in Informational Technology and Management (Expected May 2019)</p>
+    <p id="g">Bachelors in Informational Technology and Management (Expected May 2019)</p>
     <h3><span class="text">Experience</span></h3>
     <p><span class="textone">Dominick's Finer Foods - Chicago, Illinois</span> | <span class="texttwo">Utility Clerk, November 2012 - June 2013</span></p>
     <div id="a">
@@ -80,13 +82,15 @@
       </ul>
     </div>
     <h3><span class="text">Skills</span></h3>
-    <ul>
-      <li>Basic computer software and hardware</li>
-      <li>Basic knowledge of Java, C#, C++, and Visual Basic language</li>
-      <li>Microsoft Word, Excel, and Power Point</li>
-      <li>Proficient with internet research and social media applications</li>
-      <li>Fairly fluent with the Vietnamese language</li>
-    </ul>
+    <div id="e">
+      <ul>
+        <li>Basic computer software and hardware</li>
+        <li>Basic knowledge of Java, C#, C++, and Visual Basic language</li>
+        <li>Microsoft Word, Excel, and Power Point</li>
+        <li>Proficient with internet research and social media applications</li>
+        <li>Fairly fluent with the Vietnamese language</li>
+      </ul>
+    </div>
   </body>
   
 </html>
