--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
     <div id="fixedbox">
       <nav id="navbar">
         <ul>
-          <li><a href="index.html">Introduction Page</a></li>
+          <li><a href="index.html">Introduction</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="resume.html">My Resume</a></li>
         </ul>
