--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   
   <body id="page1">
-    <h1>Welcome to Jimmy Tran's Simple HTML Website</h1>
+    <h1 id="c">Welcome to Jimmy Tran's Simple HTML Website</h1>
     <div id="font">
       <h1>(<span class="color1">n</span><span class="color2">o</span><span class="color3">w</span> <span class="color4">w</span><span class="color5">i</span><span class="color6">t</span><span class="color7">h</span> <span class="color8">C</span><span class="color9">S</span><span class="color10">S</span><span class="color11">!</span>)</h1>
     </div>
     <p id="a">Navigate Through Pages About Me</p>
     <nav id="navbar">
       <ul>
-        <li><a href="index.html">Introduction Page</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="resume.html">My Resume</a></li>
       </ul>
